[package]
name = "vault_program"
version = "0.1.0"

edition = "2021"

[dependencies]
solana-program = "3.0.0"
spl-token = { version = "8.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
borsh = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
solana-program-test = "3.0.0"
solana-sdk = "3.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.143"
base64 = "0.22.1"
rand = "0.9.2"
tempfile = "3.8"

[lib]
crate-type = ["cdylib", "lib"]
