[package]
name = "vault_program"
version = "0.1.0"

edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }
borsh = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.143"
base64 = "0.13"
rand = "0.8"
tempfile = "3.8"

[lib]
crate-type = ["cdylib", "lib"]
